# cpp-properties

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  clean.sh  eclipse_build.sh
cmake/: CMakeUninstall.cmake.in
include/: Properties.h  PropertiesException.h  PropertiesParser.h  PropertiesUtils.h  PropertyNotFoundException.h
lib/gtest-1.7.0/: Makefile
src/: CMakeLists.txt  Properties.cpp  PropertiesParser.cpp  PropertiesUtils.cpp
test/: PropertiesParserTest.cpp  PropertiesTest.cpp  PropertiesUtilsTest.cpp  out.properties  test1.properties  test2.properties
